[package]
name = "fuser-async-demo"
authors = ["cpg <c@pgdm.ch>"]
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/cpg314/fuser-async"


[dependencies]
anyhow = { version = "1.0.42", features = ["backtrace"] }
clap = { version = "3.0.0", features = ["derive", "env", "wrap_help"] }
fuser = "0.11.1"
tokio = { version = "1.8.1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"


fuser-async = { path = "../" }
fuser-async-s3 = { path = "../s3" }
fuser-async-local = { path = "../local" }

[package.metadata.docs.rs]
all-features = true
