[package]
name = "fuser-async-local"
authors = ["cpg <c@pgdm.ch>"]
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/cpg314/fuser-async"


[dependencies]
async-trait = "0.1.51"
bytes = "1.2.1"
cfg-if = "0.1"
fuser = "0.11.1"
glob = "0.3.0"
memmap2 = { version = "0.5.8",  optional = true }
tokio = { version = "1.8.1", features = ["full"] }
tracing = "0.1"
fuser-async = { path = "../"  }


[features]
default = ["memmap"]
memmap = ["dep:memmap2"]

[package.metadata.docs.rs]
all-features = true
