[package]
name = "fuser-async-s3"
authors = ["cpg <c@pgdm.ch>"]
version = "0.1.1"
edition = "2021"
license = "MIT"
repository = "https://github.com/cpg314/fuser-async"

[dependencies]
anyhow = { version = "1.0.42", features = ["backtrace"] }
async-trait = "0.1.51"
bytes = "1.2.1"
deadpool = { version = "0.9.5" }
fuser = "0.11.1"
itertools = "0.10.5"
futures = "0.3.28"
libc = "0.2.134"
clap = { version = "3.0.0", features = ["derive", "env", "wrap_help"]}
reqwest = { version = "0.11.4", default-features = false, features = ["json", "rustls-tls", "cookies"]}
rusty-s3 = { version = "0.4.0"}
quick-xml = { version = "0.28.1", features = ["serialize"]  }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
thiserror = "1.0.38"
tokio = { version = "1.8.1", features = ["full"] }
tracing = "0.1"
trait-set = "0.3.0"
urlencoding = { version = "2.1.2"  }
fuser-async = { path = "../"  }

[package.metadata.docs.rs]
all-features = true
